working backend , frontend in progress with displaying data

--- a/clients/src/App.css
+++ b/clients/src/App.css
@@ -1,5 +1,14 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  color: white;
+}
 .App {
   text-align: center;
+  background: #282c34; 
+}
+#getId {
+  background: #61dafb,
 }
 
 .App-logo {
